[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lavacli"
version = "1.0.0"
description = "A beautiful, interactive terminal lava lamp simulator"
license = "MIT"
requires-python = ">=3.6"

[project.scripts]
lavacli = "lavacli.app:run"
