[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name. The GitHub repo is still "lavacli" and the
# console script below is still "lavacli" — only the PyPI package name
# differs because plain "lavacli" is taken.
name = "pylavalamp"
version = "1.2.0"
description = "A beautiful, interactive terminal lava lamp simulator with metaball physics, koi pond mode, and chrome rocket lamps"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Ben" },
]
keywords = ["lava-lamp", "terminal", "tui", "curses", "ascii-art", "animation", "koi", "metaball"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Terminals",
]

# No runtime dependencies — pure Python stdlib (curses)
dependencies = []

[project.urls]
Homepage = "https://github.com/ElysiumDisc/lavacli"
Repository = "https://github.com/ElysiumDisc/lavacli"
Issues = "https://github.com/ElysiumDisc/lavacli/issues"
Changelog = "https://github.com/ElysiumDisc/lavacli/blob/main/CHANGELOG.md"

[project.scripts]
lavacli = "lavacli.app:run"

[tool.setuptools]
packages = ["lavacli"]
